--- a/.github/workflows/dottest.yml
+++ b/.github/workflows/dottest.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run dotTEST unit tests
-        id: dottest_ut
+        id: dottest_ut_sa
         # You may pin to the exact commit or the version.
         # uses: tobyash86/run-dottest-analyzer-proto@1bc4be095189f455793afdb10b47127e06ae25ff
         uses: parasoft/run-dottest-analyzer@master
@@ -42,15 +42,15 @@ jobs:
       
       # ---------------------------------------------------------------
       # Upload the findings into the GitHub code scanning alert section
-      - name: Upload UT results to GitHub
+      - name: Upload UT+SA results to GitHub
         uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: ${{ steps.dottest_ut.outputs.report }}
+          sarif_file: ${{ steps.dottest_ut_sa.outputs.report }}
           
       # ---------------------------------------------------------------
       # Archive the findings reports as job artifact
-      - name: Upload execution artifacts
+      - name: Upload UT+SA artifacts
         uses: actions/upload-artifact@v3
         with:
           name: Test Report files
-          path: ${{ steps.dottest_ut.outputs.reportDir }}/*.*
+          path: ${{ steps.dottest_ut_sa.outputs.reportDir }}/*.*
